[FIX] Better contrast circle number

--- a/css/main.css
+++ b/css/main.css
@@ -697,12 +697,16 @@ p a {
 .icn_close:after {
 	width: 100%;
 	height: 15%;
-	background-color: #000;
+	background-color: #202526;
 	border-radius: 100px;
 	transform: translate3d(-50%,-50%,0) rotate(45deg);
 }
 .icn_close:after {
 	transform: translate3d(-50%,-50%,0) rotate(-45deg);
+}
+.dark .icn_close:before,
+.dark .icn_close:after {
+	background-color: #202526;
 }
 
 
@@ -1517,6 +1521,11 @@ main {
 	text-shadow: 20px 5px 30px rgba(0, 0, 0, 0.2);
 	border-radius: 100%;
 }
+.dark .stats p b {
+	background-color: #d4e7ec;
+	border-color: #d4e7ec;
+	color: #2f4148;
+}
 .stats p small {
 	color: #040404;
 }
@@ -1636,9 +1645,9 @@ main {
 	}
 	.stats p b {
 		margin: 0 0 .75vh -.5vh;
-		width: 6.5vh;
-		height: 6.5vh;
-		line-height: 6.5vh;
+		width: 7vh;
+		height: 7vh;
+		line-height: 7vh;
 		border-width: .3vh;
 		letter-spacing: -.01em;
 	}
